# Control_aforo_SBC

./: README.md
Controlador_DL/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
Controlador_DL/main/: CMakeLists.txt  app_main.cpp  idf_component.yml  mqtt_aforo.c  mqtt_aforo.h  wifi_aforo.c  wifi_aforo.h
